docs(api): cleaned up docs;
